# pandas-ai-local

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: quickstart.py
examples/data/: sales.csv
nlda/: __init__.py  agent.py  cli.py  config.py  parsing.py  prompts.py  report.py  sandbox.py
nlda/loaders/: __init__.py  files.py  profile.py  sql.py
nlda/providers/: __init__.py  base.py  claude.py  factory.py  ollama.py  openai_provider.py
nlda/ui/: streamlit_app.py
tests/: test_agent.py  test_parsing.py  test_profile.py  test_sandbox.py
