[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandas-ai-local"
version = "0.1.0"
description = "Natural-language driven automated data analysis with swappable LLM backends."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pandas-ai-local contributors" }]
keywords = ["pandas", "llm", "data-analysis", "claude", "openai", "ollama", "natural-language"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "requests>=2.31",
    "sqlalchemy>=2.0",
    "streamlit>=1.32",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
mysql  = ["pymysql>=1.1"]
all    = ["anthropic>=0.40", "openai>=1.40", "pymysql>=1.1"]
dev    = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
nlda = "nlda.cli:app"

[project.urls]
Homepage = "https://github.com/ablek757/pandas-ai-local"
Issues   = "https://github.com/ablek757/pandas-ai-local/issues"

[tool.setuptools.packages.find]
include = ["nlda*"]
